--- a/Makefile.example
+++ b/Makefile.example
@@ -4,6 +4,7 @@ help:
 	@echo "build -builds the project"
 	@echo "run -runs the project withou building it"
 	@echo "clean -removes the binary file"
+	@echo "host -starts the server on virtual host"
 	@echo "help - displays this help message"
 	@echo "migrate_create -creates a new migration"
 	@echo "migrate_up -runs the migration up"
@@ -22,7 +23,13 @@ clean:
 	@echo "Removing the binary file"
 	rm -f ./mvc
 
+host:
+	@echo "Starting the server on virtual host"
+	@echo "Server started on mvc.libmansys.local"
+	go run cmd/main.go
+
 migrate_create:
 	@echo "Creating a new migration"
-	migrate create -ext sql -dir database/migration -seq init
+	@read -p "Enter migration name: " name; \
+	migrate create -ext sql -dir database/migration -seq $$name
 # The migration_up and migration_down will appear here after running startup.sh
